--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá Mundo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        h1 {
+            color: #4CAF50;
+        }
+    </style>
 </head>
+
 <body>
-    <h1 id="message">Carregando mensagem</h1>
+    <h1 id="message">Carregando mensagem...</h1>
 
     <script src="app.js"></script>
 </body>
+
 </html>
