--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,24 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olá Mundo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        h1 {
-            color: #4CAF50;
-        }
-    </style>
+    <title>CRUD App</title>
 </head>
 
 <body>
-    <h1 id="message">Carregando mensagem...</h1>
+    <h1>CRUD App</h1>
+    <h2>Create User</h2>
+    <form id="createUserForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <button type="submit">Create User</button>
+    </form>
 
-    <script src="app.js"></script>
+    <h2>Users List</h2>
+    <button id="fetchUsers">Fetch Users</button>
+    <ul id="usersList"></ul>
+
+    <script src="frontend.js"></script>
 </body>
 
 </html>
